feat: add section tickets

--- a/museum/index.html
+++ b/museum/index.html
@@ -165,6 +165,62 @@
       </div>
     </section>
 
+    <section class="tickets">
+      <div class="container">
+        <h2 id="tickets" class="title">Buy tickets</h2>
+        <hr>
+        <div class="tickets-columns">
+          <div class="column-first">
+            <img src="./assets/img-image/tickets/ticket-img.jpg" alt="ticket">
+          </div>
+          <div class="column-second">
+            <div class="ticket-type">
+              <div class="ticket-title">Ticket Type</div>
+              <div class="ticket-type__item">
+                <input id="permanent" type="radio">
+                <label for="permanent">Permanent exhibition</label>
+              </div>
+              <div class="ticket-type__item">
+                <input id="Temporary" type="radio">
+                <label for="Temporary">Temporary exhibition</label>
+              </div>
+              <div class="ticket-type__item">
+                <input id="Admission" type="radio">
+                <label for="Admission">Combined Admission</label>
+              </div>
+            </div>
+            <div class="ticket-amount">
+              <div class="ticket-title">Amount</div> 
+              <div class="ticket-amount__item">
+                <label for="">Basic 18+</label>
+                <div class="counter-wrap">
+                  <button class="minus">-</button>
+                  <input class="value-counter" type="number" placeholder="1">
+                  <button class="plus">+</button>
+
+                </div>
+              </div>
+              <div class="ticket-amount__item">
+                <label for="">Senior 65+</label>
+                <div class="counter-wrap">
+                  <button class="minus">-</button>
+                  <input class="value-counter" type="number" placeholder="1">
+                  <button class="minus">+</button>
+
+                </div>
+              </div>
+
+              <div class="ticket-price ticket-title">
+                Total €220
+              </div>
+              <button class="buy">Buy Now</button>
+            </div>
+           
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="contacts">
       <div class="container">
         <h2 id="contacts" class="title title-light">Contacts</h2>
