fix: input width and label bug, refactor: footer-menu

--- a/museum/index.html
+++ b/museum/index.html
@@ -192,19 +192,19 @@
             <div class="ticket-amount">
               <div class="ticket-title">Amount</div> 
               <div class="ticket-amount__item">
-                <label for="">Basic 18+</label>
+                <label for="value-counter1">Basic 18+</label>
                 <div class="counter-wrap">
                   <button class="minus">-</button>
-                  <input class="value-counter" type="number" placeholder="1">
+                  <input id="value-counter1" class="value-counter" type="number" placeholder="1" value="1">
                   <button class="plus">+</button>
 
                 </div>
               </div>
               <div class="ticket-amount__item">
-                <label for="">Senior 65+</label>
+                <label for="value-counter2">Senior 65+</label>
                 <div class="counter-wrap">
                   <button class="minus">-</button>
-                  <input class="value-counter" type="number" placeholder="1">
+                  <input id="value-counter2" class="value-counter" type="number" placeholder="1" value="1">
                   <button class="minus">+</button>
 
                 </div>
@@ -230,15 +230,15 @@
             <div class="full-name" > Palais Royal <br> Musee du Louvre</div>
             <div class="full-address">
               <div class="item-address">
-                <label for="">address:</label> 
+                <span>address:</span> 
                 <a href="#">75001 Paris, France</a>
               </div>
               <div class="item-address">
-                <label for="">phone:</label> 
+                <span for="">phone:</span> 
                 <a href="tel:+33(0)140205050">+33(0) 1 40 20 50 50</a>
               </div>
               <div class="item-address">
-                <label for="">mail:</label> 
+                <span for="">mail:</span> 
                 <a href="mailto:info@louvre.fr">info@louvre.fr</a>
               </div>
             </div>
@@ -265,18 +265,13 @@
         <div class="column-second">
           <nav class="navigation">
             <ul class="menu">
-              <div class="column">
-                <li><a class="menu_item-link" href="#welcome">Welcome</a></li>
-                <li><a class="menu_item-link" href="#visiting">Visiting</a></li>
-                <li><a class="menu_item-link" href="#explore">Explore</a></li>
-              </div>
-              <div class="column">
-                <li><a class="menu_item-link" href="#video">Video</a></li>
-                <li><a class="menu_item-link" href="#ticket">Tickets</a></li>
-                <li><a class="menu_item-link" href="#contacts">Contacts</a></li>
-              </div>
-
-              
+              <li><a class="menu_item-link" href="#welcome">Welcome</a></li>
+              <li><a class="menu_item-link" href="#visiting">Visiting</a></li>
+              <li><a class="menu_item-link" href="#explore">Explore</a></li>
+            
+              <li><a class="menu_item-link" href="#video">Video</a></li>
+              <li><a class="menu_item-link" href="#ticket">Tickets</a></li>
+              <li><a class="menu_item-link" href="#contacts">Contacts</a></li>
             </ul>
           </nav>
         </div>
