fix: broke links

--- a/museum/index.html
+++ b/museum/index.html
@@ -56,7 +56,7 @@
             <hr class="visiting__item-line">
             <div class="visiting__item-links">
               <a class="virtual-tour" href="#">360° Virtual Tour</a>
-              <a href="virtual-panorama">Google Street Panorama View</a>
+              <a href="#">Google Street Panorama View</a>
             </div>
           </div>
           <div class="visiting-tour__item">
@@ -65,7 +65,7 @@
             <hr class="visiting__item-line">
             <div class="visiting__item-links">
               <a class="virtual-tour" href="#">360° Virtual Tour</a>
-              <a href="virtual-panorama">Google Street Panorama View</a>
+              <a href="#">Google Street Panorama View</a>
             </div>
           </div>
           <div class="visiting-tour__item">
@@ -74,7 +74,7 @@
             <hr class="visiting__item-line">
             <div class="visiting__item-links">
               <a class="virtual-tour" href="#">360° Virtual Tour</a>
-              <a href="virtual-panorama">Google Street Panorama View</a>
+              <a href="#">Google Street Panorama View</a>
             </div>
           </div>
           <div class="visiting-tour__item">
@@ -83,7 +83,7 @@
             <hr class="visiting__item-line">
             <div class="visiting__item-links">
               <a class="virtual-tour" href="#">360° Virtual Tour</a>
-              <a href="virtual-panorama">Google Street Panorama View</a>
+              <a href="#">Google Street Panorama View</a>
             </div>
           </div>
           <div class="visiting-tour__item">
@@ -92,7 +92,7 @@
             <hr class="visiting__item-line">
             <div class="visiting__item-links">
               <a class="virtual-tour" href="#">360° Virtual Tour</a>
-              <a href="virtual-panorama">Google Street Panorama View</a>
+              <a href="#">Google Street Panorama View</a>
             </div>
           </div>
           <div class="visiting-tour__item">
@@ -101,7 +101,7 @@
             <hr class="visiting__item-line">
             <div class="visiting__item-links">
               <a class="virtual-tour" href="#">360° Virtual Tour</a>
-              <a href="virtual-panorama">Google Street Panorama View</a>
+              <a href="#">Google Street Panorama View</a>
             </div>
           </div>
         </div>
@@ -234,11 +234,11 @@
                 <a href="#">75001 Paris, France</a>
               </div>
               <div class="item-address">
-                <span for="">phone:</span> 
+                <span>phone:</span> 
                 <a href="tel:+33(0)140205050">+33(0) 1 40 20 50 50</a>
               </div>
               <div class="item-address">
-                <span for="">mail:</span> 
+                <span>mail:</span> 
                 <a href="mailto:info@louvre.fr">info@louvre.fr</a>
               </div>
             </div>
