fix: type radion btn

--- a/museum/index.html
+++ b/museum/index.html
@@ -177,15 +177,15 @@
             <div class="ticket-type">
               <div class="ticket-title">Ticket Type</div>
               <div class="ticket-type__item">
-                <input id="permanent" type="radio">
+                <input id="permanent" type="radio" name="ticket">
                 <label for="permanent">Permanent exhibition</label>
               </div>
               <div class="ticket-type__item">
-                <input id="Temporary" type="radio">
+                <input id="Temporary" type="radio" name="ticket">
                 <label for="Temporary">Temporary exhibition</label>
               </div>
               <div class="ticket-type__item">
-                <input id="Admission" type="radio">
+                <input id="Admission" type="radio" name="ticket">
                 <label for="Admission">Combined Admission</label>
               </div>
             </div>
