fix: broken links

--- a/museum/index.html
+++ b/museum/index.html
@@ -27,7 +27,7 @@
               <a class="menu_item-link" href="#video">Video</a>
             </li>
             <li class="menu_item">
-              <a class="menu_item-link" href="#tickets">Tickets</a>
+              <a class="menu_item-link" href="#ticket">Tickets</a>
             </li>
             <li class="menu_item">
               <a class="menu_item-link" href="#contacts">Contacts</a>
@@ -167,7 +167,7 @@
 
     <section class="tickets">
       <div class="container">
-        <h2 id="tickets" class="title">Buy tickets</h2>
+        <h2 id="ticket" class="title">Buy tickets</h2>
         <hr>
         <div class="tickets-columns">
           <div class="column-first">
